# 4Sight

./: README.md
Applications/: readme.txt
Applications/Light Pen/: elements.py  theScratchpad2.py
Archives/: basicelements.py  ocv_elements.py
Archives/ColorDetect/: ocv_elements.py
Archives/Colors/: ocv_mask.py
Archives/Counter/: c_main.py
Archives/Counter/static image/: c_main.py  c_outf.py
Archives/FileSave/: filterFind.py  filterFind.py~  ocvxsave.py  setup.py
Archives/Transform/: ocv_transform.py
Archives/Zoom/: ocv_zoomimg.py  ocv_zoomvid.py
Archives/perspective/: elements.py  ocv_pers.py
Basic/: readme.txt
Basic/camImg/: CMakeCache.txt  Makefile  camImg  camImg.cpp  camImg.cpp~  cmake_install.cmake
Basic/camVid/: CMakeCache.txt  Makefile  camVid  camVid.cpp  cmake_install.cmake
Basic/fileImg/: CMakeCache.txt  Makefile  cmake_install.cmake  fileImg  fileImg.cpp
Functions/: readme.txt
Research/augMental/camTest/: CMakeLists.txt  camTest.cpp  camTest.cpp~  compareTimeThresh.cpp  compareTimeThresh.cpp~  filterFind.py  getCorners.cpp  getCorners.cpp~  savefile.py  testImage.cpp
Research/augMental/test/: CMakeLists.txt  main.cpp  main.cpp~
Research/genBoardTestor/: CMakeLists.txt
Research/genBoardTestor/Python Version/: Video.py  main.py  mainWindow.ui  ui.py
Research/genPCBDesigner/: CMakeLists.txt  main.cpp
Research/imgSeg_thresh/: CMakeLists.txt  imgSeg_thresh.cpp  imgSeg_thresh.cpp~
Research/keyFrameHist/: CMakeLists.txt  fileImage.py  filterFind.py  keyFrameHist.cpp  keyFrameHist.cpp~  keyFrameHistVid.cpp  keyFrameHistVid.cpp~
Research/multiColorThresh/: CMakeLists.txt  multiColorThresh.cpp  multiColorThresh.cpp~  multiColorThreshVid.cpp
Research/otsuMethod/: CMakeLists.txt  otsuMethod.cpp  otsuMethod.cpp~
Research/testBoost/test/: CMakeLists.txt  test_ser.cpp
Structures/: readme.txt
Tools/: readme.txt
Tools/benchTime/: CMakeCache.txt  CMakeLists.txt  Makefile  benchTime  benchTime.cpp  cmake_install.cmake
Tools/eigenCam/: CMakeLists.txt  eigenCam.cpp
Tools/eigenTest/: CMakeLists.txt
Tools/neonAsmGray/: CMakeLists.txt  neonAsmGray.cpp~
Tools/neonAsmRecolor/: neonAsmRecolorVid.cpp~
Tools/neonIntGray/: CMakeLists.txt  neonIntGray.cpp  neonIntGray.cpp~
Tools/neon_testbed/neonAsmRecolor/: neonAsmRecolorVid.cpp  neonAsmRecolorVid.cpp~
Tools/neon_testbed/neonAsmThresh/: CMakeLists.txt
Tools/test/: CMakeCache.txt  Makefile  cmake_install.cmake  test  test.cpp  test.cpp~
Tools/testRecolor/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  testRecolor  testRecolor.cpp
Tools/testRecolorVid/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  testRecolorVid  testRecolorVid.cpp
Tools/testVid/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  funcs.cpp  funcs.cpp~  funcs.c~  funcs.hpp  funcs.hpp~  testVid  testVid.cpp~
