cmake_minimum_required(VERSION 2.8)
project( imgSeg_thresh )
SET( CMAKE_CXX_FLAGS  "-mfpu=neon -mfloat-abi=hard" )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( imgSeg_thresh imgSeg_thresh.cpp )
target_link_libraries( imgSeg_thresh ${OpenCV_LIBS} )
add_executable( imgSeg_threshVid imgSeg_threshVid.cpp )
target_link_libraries( imgSeg_threshVid ${OpenCV_LIBS} )