cmake_minimum_required(VERSION 2.8)
project( multiColorThresh )
SET( CMAKE_CXX_FLAGS  "-mfpu=neon -mfloat-abi=hard" )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( multiColorThresh multiColorThresh.cpp )
target_link_libraries( multiColorThresh ${OpenCV_LIBS} )
add_executable( multiColorThreshVid multiColorThreshVid.cpp )
target_link_libraries( multiColorThreshVid ${OpenCV_LIBS} )