cmake_minimum_required(VERSION 2.8)
project( multiColorThresh )
SET( CMAKE_CXX_FLAGS  "-mfpu=neon -mfloat-abi=hard -lboost_serialization" )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
FIND_PACKAGE( Boost 1.40 COMPONENTS program_options serialization REQUIRED )
INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )
add_executable( multiColorThresh multiColorThresh.cpp )
target_link_libraries( multiColorThresh ${OpenCV_LIBS} )
add_executable( multiColorThreshVid multiColorThreshVid.cpp )
target_link_libraries( multiColorThreshVid ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( multiColorThreshVid ${Boost_LIBRARIES} )