cmake_minimum_required(VERSION 2.8)
project( eigeneigenCam )
SET( CMAKE_CXX_FLAGS  "-mfpu=neon -mfloat-abi=hard" )
SET( ENV{EIGEN3_INCLUDE_DIR}  "/usr/include/eigen3" )
find_package(Eigen3 REQUIRED)
include_directories( "$ENV{EIGEN3_INCLUDE_DIR}" )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( eigenCam eigenCam.cpp )
target_link_libraries( eigenCam ${OpenCV_LIBS} )