cmake_minimum_required(VERSION 2.8)
project( neonAsmGray )
SET( CMAKE_CXX_FLAGS  "-mfpu=neon -mfloat-abi=hard" )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( neonAsmGray neonAsmGray.cpp )
target_link_libraries( neonAsmGray ${OpenCV_LIBS} )
add_executable( neonAsmGrayVid neonAsmGrayVid.cpp )
target_link_libraries( neonAsmGrayVid ${OpenCV_LIBS} )