cmake_minimum_required(VERSION 2.8)
project( testVid )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( testVid testVid.cpp )
target_link_libraries( testVid ${OpenCV_LIBS} )
set ( LIBSRC funcs.cpp funcs.hpp )
add_library (funcs ${LIBSRC})
target_link_libraries( testVid funcs )